@@ -3,25 +3,27 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
 
-  :min-lein-version "2.7.1"
+  :min-lein-version "2.8.1"
 
   :deploy-repositories {"clojars" {:sign-releases false}}
 
-  :dependencies [[org.clojure/clojure "1.9.0-alpha17"]
-                 [org.clojure/clojurescript "1.9.671"]
-                 [org.clojure/core.async "0.3.443"]
-                 [cljs-http "0.1.42"]
-                 [clj-http "3.6.0"]
-                 [cheshire "5.7.1"]
-                 [aysylu/loom "1.0.0"]]
-  :codox {:language :clojurescript}
-  :plugins [[lein-figwheel "0.5.8"]
-            [lein-cljsbuild "1.1.6" :exclusions [[org.clojure/clojure]]]
-            [lein-doo "0.1.7"]
+  :dependencies [[org.clojure/clojure "1.10.1"]
+                 [org.clojure/clojurescript "1.10.520"]
+                 [org.clojure/core.async "0.4.500"]
+                 [cljs-http "0.1.46"]
+                 [clj-http "3.10.0"]
+                 [cheshire "5.8.1"]
+                 [aysylu/loom "1.0.2"]]
+  :plugins [[lein-cljsbuild "1.1.7" :exclusions [[org.clojure/clojure]]]
+            [org.clojure/core.unify "0.5.7"]
             [lein-cljfmt "0.6.1"]
-            [lein-codox "0.10.5"]]
+            [lein-codox "0.10.7"]]
+  :aliases {"format" ["cljfmt" "fix"]}
 
   :source-paths ["src/cljc" "src/cljs" "src/clj" "test/clj" "test/cljs"]
+
+  :codox {:language :clojurescript
+          :source-paths ["src"]}
 
   :figwheel {:server-port 5003
              :reload-clj-files {:clj true :cljc true}}
@@ -57,9 +59,14 @@
                            :main imcljs.runner
                            :optimizations :none}}]}
 
-  :profiles {:dev {:dependencies [[binaryage/devtools "0.9.4"]
-                                  [figwheel-sidecar "0.5.8"]
-                                  [com.cemerick/piggieback "0.2.1"]]
-                   :source-paths ["src" "dev"]
-                   :repl-options {:init (set! *print-length* 50)
-                                  :nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}}})
+  :repl-options {:nrepl-middleware [cider.piggieback/wrap-cljs-repl]}
+
+  :profiles {:dev {:dependencies [[binaryage/devtools "0.9.10"]
+                                  [figwheel-sidecar "0.5.19"]
+                                  [cider/piggieback "0.4.1"]]
+                   :plugins [[lein-figwheel "0.5.19"]
+                             [lein-doo "0.1.10"]]}
+             :repl {:source-paths ["dev"]}
+             :java9 {:jvm-opts ["--add-modules" "java.xml.bind"]}}
+
+  :cljfmt {:indents {async [[:inner 0]]}})
